--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,28 @@
 body{
-  background:#f9f8fe;
+  background: linear-gradient(110.5deg, rgba(248, 196, 249, 0.66) 22.8%, rgba(253, 122, 4, 0.15) 64.6%);
+
 }
 
 a{
   color: #7f6fd1;
 }
 
+h1{
+  font-family: pacifico;
+  font-size: 60px;
+}
+
 .App{
-  max-width: 960px;
+  max-width: 950px;
   margin: 0 auto
 }
 
 .App-header{
-  margin: 30px 0;
+ margin: 50px;
+ text-align: center;
+
 }
 
-.App-logo{
-  max-width: 200px;
-  display: block;
-  margin: 0 auto;
-}
 
 .App-footer {
   text-align: center;
