--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -5,7 +5,7 @@
 }
 
 .Dictionary section{
-    background: white;
+    background: rgb(249, 246, 244);
     padding: 30px;
     border-radius: 6px;
     box-shadow: 0 10px 20px rgba(0 0 0 /10%);
